--- a/README.adoc
+++ b/README.adoc
@@ -42,6 +42,11 @@ Module qui consomme les messages sur le serveur rabbitmq
 === Scale/mise en place swarm
 
 . Initialiser les noeuds swarm + commandes
+. Créer le registry en tant que service
+.. docker service create --name registry -p 5000:5000 registry:2
+. Update des compose en v3 pour la stack swarm (version, image avec registry, deploy)
+. push des images via docker-compose push
+. deployer la stack
 
 
 === Créer son registry
